# SmartBlogger

./: README.md  app.py  clear_cache.sh  config.py  example.env  pyproject.toml  setup_local_llm.sh  state.py  state_management.py  styling_feedback.md  test_image_processing.py  test_mlx.py  workflow.py  workflow_runner.py
docs/: ANALYTICS_DASHBOARD.md  ANALYTICS_SETUP.md  APPLE_SILICON.md  CHANGELOG_DESIGN.md  CHANGELOG_v2.4.md  CONTENT_QUALITY_IMPROVEMENTS.md  DESIGN_UPDATES.md  DEVELOPMENT.md  EDITOR_QUICKSTART.md  HARDWARE_DETECTION.md  IMAGE_PROCESSING.md  INTRODUCTION_SYNTHESIS.md  QUICKSTART_DESIGN.md  WORKFLOW_GUIDE.md  WYSIWYG_INTEGRATION.md
models/: __init__.py  llm_manager.py  plagiarism.py  plagirism.py  summarizer.py
nodes/: __init__.py  completion.py  drafting.py  input_processing.py  introduction.py  plagiarism.py  plagirism.py  processing.py  seo_optimization.py
nodes/research/: arxiv.py  coordinator.py  github.py  perplexity.py  repo_indexer.py  researcher.py  substack.py
services/: github_repo_service.py
ui/: README.md  analytics_display.py  components.py  content_display.py  dashboard.py  editor_display.py  footer.py  loading_screen.py  plagarism_display.py  plagiarism_display.py  research_display.py  sidebar.py  state.py  theme.py
utils/: error_handling.py  file_processing.py  formatting.py  memory_management.py  ocr_processor.py  research_organizer.py  token_tracking.py
