[project]
name = "blogging-assistant"
version = "0.1.0"
description = "A Smart Personal-Use Blogging/Writing Tool with Plagairism Detection."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
authors = [
    {name = "AnnMargaret Tutu", email = "annmargaret.mailforce@gmail.com"},
]
classifiers = []
dependencies = [
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "arxiv>=2.1.0",
    "PyPDF2>=3.0.0",
    "pydantic",
    "jinaai",
    "python-dotenv",
    "tavily-python",
    "langgraph",
    "diskcache>=5.6.0",
    "streamlit>=1.28.0",
    "langchain-community",
    "langchain-groq"
]

[project.optional-dependencies]
dev = []

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]

[project.scripts]
streamlit = "app:main"
