[project]
name = "blogging-assistant"
version = "0.1.0"
description = "A Smart Personal-Use Blogging/Writing Tool with Plagairism Detection."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
authors = [
    {name = "AnnMargaret Tutu", email = "annmargaret.mailforce@gmail.com"},
]
classifiers = []
dependencies = [
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "arxiv>=2.1.0",
    "PyPDF2>=3.0.0",
    "pydantic",
    "jinaai",
    "python-dotenv",
    "tavily-python",
    "langgraph",
    "diskcache>=5.6.0",
    "streamlit>=1.28.0",
    "langchain-community",
    "langchain-groq",
    "transformers>=4.57.1",
    "plotly>=5.18.0",
    "streamlit-jodit>=3.1.0",
    "markdown>=3.9",
    "markdownify>=1.2.0",
    "streamlit-shadcn-ui>=0.1.19",
    "vllm>=0.4.0",
    "einops",
    "addict",
    "easydict",
    # "flash-attn>=2.5.0", Using >= to allow compatible versions
    "Pillow",
    "mlx>=0.10.0",
    "mlx-lm>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

apple-silicon = [
    "mlx>=0.10.0",
    "mlx-lm>=0.10.0",
]

docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]

editor = [
    "streamlit-jodit>=0.1.0",
    "markdown>=3.4.0",
    "markdownify>=0.11.0",
]

[tool.uv]
extra-build-dependencies = {"flash-attn" = ["torch"]}

[project.scripts]
streamlit = "app:main"
